--- a/alurapic/src/app/photos/photo-list/photo-list.component.html
+++ b/alurapic/src/app/photos/photo-list/photo-list.component.html
@@ -1,10 +1,12 @@
-<ol class="list-unstyled row">
-    <li  *ngFor=" let photo of photos" class="col-4">
-        <ap-photo 
-           
-            [url]="photo.url"
-            [description]="photo.description">
-        </ap-photo>
-    </li>
-</ol>
-
+<div class="text-center mt-3 mb-3">
+    <form>
+        <input class="rounded" 
+            type="search"  
+            placeholder="search..." 
+            autofocus
+            (keyup)="debounce.next($event.target.value)"
+            > 
+    </form>
+</div>
+<ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
+<ap-load-button [hasMore]= "hasMore"></ap-load-button>
